--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
                 <th class="p-3">Name</th>
                 <th class="p-3 w-40"><i data-lucide="swords" class="inline w-4 h-4 mr-2"></i>Kills</th>
                 <th class="p-3 w-40"><i data-lucide="skull" class="inline w-4 h-4 mr-2"></i>Tode</th>
-                <th class="p-3 w-32 text-center">K/D</th>
+                <th class="p-3 w-32 text-center"><i data-lucide="divide" class="inline w-4 h-4 mr-2"></i>K/D</th>
                 <th class="p-3 w-32 text-center"><i data-lucide="trophy" class="inline w-4 h-4 mr-2"></i>Siege</th>
                 <th class="p-3 w-32 text-center"><i data-lucide="shield-off" class="inline w-4 h-4 mr-2"></i>Niederl.</th>
                 <th class="p-3 w-40"><i data-lucide="pie-chart" class="inline w-4 h-4 mr-2"></i>Winrate</th>
