--- a/views/index.html
+++ b/views/index.html
@@ -52,10 +52,14 @@
                 <th class="p-3 w-12 text-center">Rang</th>
                 <th class="p-3">Name</th>
                 <th class="p-3 w-40"><i data-lucide="swords" class="inline w-4 h-4 mr-2"></i>Kills</th>
+                <th class="p-3 w-40"><i data-lucide="heart-minus" class="inline w-4 h-4 mr-2"></i>Team-Kills</th>
                 <th class="p-3 w-40"><i data-lucide="skull" class="inline w-4 h-4 mr-2"></i>Tode</th>
-                <th class="p-3 w-32 text-center"><i data-lucide="divide" class="inline w-4 h-4 mr-2"></i>K/D</th>
-                <th class="p-3 w-32 text-center"><i data-lucide="trophy" class="inline w-4 h-4 mr-2"></i>Siege</th>
-                <th class="p-3 w-32 text-center"><i data-lucide="shield-off" class="inline w-4 h-4 mr-2"></i>Niederl.</th>
+                <th class="p-3 w-28 text-center"><i data-lucide="divide" class="inline w-4 h-4 mr-2"></i>K/D</th>
+                <th class="p-3 w-28 text-center"><i data-lucide="trophy" class="inline w-4 h-4 mr-2"></i>Siege</th>
+                <th class="p-3 w-28 text-center"><i data-lucide="shield-off" class="inline w-4 h-4 mr-2"></i>Losses</th>
+                <th class="p-3 w-40"><i data-lucide="flame" class="inline w-4 h-4 mr-2"></i>Schaden</th>
+                <th class="p-3 w-40"><i data-lucide="user-x" class="inline w-4 h-4 mr-2"></i>Teamschaden</th>
+                <th class="p-3 w-28 text-center"><i data-lucide="ghost " class="inline w-4 h-4 mr-2"></i>Traitor</th>
                 <th class="p-3 w-40"><i data-lucide="pie-chart" class="inline w-4 h-4 mr-2"></i>Winrate</th>
             </tr>
             </thead>
